# r36s-gamebootstrap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VSWorkspaceSettings.json
include/: batch.hpp  debug.hpp  device.hpp  math.hpp  particles.hpp  ringbuff.hpp  sky.hpp  types.hpp
src/: batch.cpp  debug.cpp  device.cpp  main.cpp  math.cpp  particles.cpp  sky.cpp
src/impl/: device.cpp  device_r36s.cpp  device_win.cpp
